# ansel

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  ansel.pot  build.sh  it.po
.ci/: Brewfile  ci-script-appimage.sh
.github/workflows/: ci.yml  docs.yml  lin-nightly.yml  mac-nightly.yml  manualrun.yml  win-nightly.yml
data/: anselconfig.dtd  anselconfig.xml.in
data/kernels/: bspline.cl
data/themes/: ansel.css
doc/: Doxyfile  resizing-scaling.md
packaging/macosx/: 2_build_hb_ansel_custom.sh  3_make_hb_ansel_package.sh  BUILD.txt  Dependencies.txt  ansel.bundle  gnutls-fixes.patch
po/: POTFILES.in  af.po  ansel.pot  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sr@latin.po  sv.po  th.po  tr.po  uk.po  update-translations.sh  zh_CN.po  zh_TW.po
snap/: snapcraft.yaml
src/: CMakeLists.txt  config.cmake.h  main.c
src/bauhaus/: bauhaus.c  bauhaus.h
src/chart/: pfm.c  thinplate.c
src/cli/: main.c
src/common/: act_on.c  act_on.h  atomic.h  bilateral.c  box_filters.c  bspline.h  cache.c  chromatic_adaptation.h  collection.c  collection.h  color_picker.c  colorlabels.c  colorlabels.h  colorspaces.c  colorspaces.h  colorspaces_inline_conversions.h  darktable.c  darktable.h  database.c  database.h  datetime.h  debug.h  dlopencl.c  dng_opcode.h  dtpthread.c  dtpthread.h  dwt.c  eigf.h  exif.cc  exif.h  fast_guided_filter.h  file_location.c  file_location.h  film.c  film.h  focus.h  focus_peaking.c  focus_peaking.h  gaussian.c  grouping.c  (+63 more)
src/control/: conf.c  conf.h  control.c  control.h  crawler.c  jobs.c  jobs.h  signal.c  signal.h
src/develop/: blend.c  blend.h  blend_gui.c  dev_history.c  dev_history.h  develop.c  develop.h  imageop.c  imageop.h  imageop_gui.c  imageop_gui.h  imageop_math.h  lightroom.c  lightroom.h  masks.h  pixelpipe.c  pixelpipe.h  pixelpipe_cache.c  pixelpipe_cache.h  pixelpipe_hb.c  pixelpipe_hb.h  tiling.c  tiling.h
src/dtgtk/: button.c  button.h  gradientslider.c  icon_cell_renderer.c  icon_cell_renderer.h  paint.c  paint.h  preview_window.c  preview_window.h  thumbnail.c  thumbnail.h  thumbnail_btn.c  thumbtable.c  thumbtable.h  togglebutton.c
src/generate-cache/: main.c
src/gui/: accelerators.c  accelerators.h  draw.h  gtk.c  (+17 more)
src/libs/: CMakeLists.txt  backgroundjobs.c  collect.c  colorpicker.c  duplicate.c  export.c  export_metadata.c  geotagging.c  histogram.c  history.c  ioporder.c  lib.c  lib.h  lib_api.h  location.c  map_locations.c  map_settings.c  masks.c  metadata.c  metadata_view.c  modulegroups.c  modulegroups.h  navigation.c  print_settings.c  snapshots.c  styles.c  tagging.c
src/libs/tools/: filmstrip.c  filter.c  hinter.c  image_infos.c  lighttable.c  mask_toolbar.c  menu.c  menu_buttons.c  module_toolbox.c  view_toolbox.c
tools/: detect-unused-functions.py  generate_prefs.xsl  gtk-icons.txt  update-translations.sh
(+168 files in other folders)
